# satysfi-simplot

./: README.md  Satyristes  satysfi-simplot-doc.opam  satysfi-simplot.opam
doc/: manual.saty
src/: simplot.satyh  style.satyh
